# fingest

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SIGNATURE_PRESERVATION.md  pyproject.toml  workflow.yml
.github/workflows/: python-publish.yml  run_pytest.yml  workflow.yml
examples/: signature_preservation_demo.py
src/fingest/: __init__.py  plugin.py  types.py
src/fingest/adapters/: __init__.py  aws.py  azure.py  base.py  gcp.py
tests/: conftest.py  test_adapters.py  test_fixtures.py  test_integration_signature.py  test_main.py  test_plugin.py  test_signature_preservation.py  test_types.py
tests/data/: config.xml  invalid.json  products.csv  users.json
