[project]
name = "fingest"
version = "1.1.0"
description = "Pytest plugin that allows you to easily define data-driven fixtures based on external files."
authors = [
    { name = "Tim Fiedler", email = "tim@0x68.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["pytest", "plugin", "fixtures", "data-driven", "testing", "json", "csv", "xml"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pytest >=8.3.5, <9.0.0",
  "lxml >=5.4.0, <6.0.0",
]

[project.entry-points.pytest11]
fingest = "fingest.plugin"

[project.urls]
Homepage = "https://github.com/0x68/fingest"
Repository = "https://github.com/0x68/fingest"
Issues = "https://github.com/0x68/fingest/issues"
Documentation = "https://github.com/0x68/fingest#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fingest"]

[dependency-groups]
dev = [
  "pytest-cov >=6.2.1, <7.0.0",
  "ruff >=0.15.2",
  "ty >=0.0.18",
  "mypy >=1.8.0",
  "pre-commit >=3.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E203", "E501", "SIM108", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fingest"]
known-third-party = ["pytest", "lxml"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
